--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,16 +82,16 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.github.jacek-marchwicki.rx-java-extensions:rx-android-extensions:1.0.4'
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
     compile 'com.jakewharton.rxbinding:rxbinding-design:0.3.0'
-    compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.google.dagger:dagger:2.4'
     provided 'com.google.dagger:dagger-compiler:2.4'
 
-    compile project(path: ':library')
+    compile project(path: ':media-gallery-android')
 }
