--- a/media-gallery-android/build.gradle
+++ b/media-gallery-android/build.gradle
@@ -16,8 +16,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.appunite'
-archivesBaseName = 'library'
-version = '1.1.1'
+archivesBaseName = 'media-gallery-android'
+version = '0.0.1'
 
 repositories {
     mavenCentral()
@@ -38,9 +38,9 @@ install {
             project {
                 packaging 'aar'
                 groupId 'com.appunite'
-                artifactId 'library'
+                artifactId 'media-gallery-android'
 
-                name 'media-gallery'
+                name 'media-gallery-android'
 
                 description appDescription
                 url appWebsiteUrl
@@ -123,25 +123,23 @@ android {
     }
 }
 
-configurations.all {
-    resolutionStrategy.force 'com.android.support:recyclerview-v7:23.0.0'
-}
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
     compile 'com.github.jacek-marchwicki.rx-java-extensions:rx-android-extensions:1.0.4'
     compile 'com.google.dagger:dagger:2.5'
-    compile 'com.appunite:photogalleryjava:1.0.1'
+    compile 'com.appunite:photogalleryjava:1.0.4'
     provided 'com.google.dagger:dagger-compiler:2.5'
 
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
+
+//    compile project(':photogalleryjava')
 
 }
