--- a/media-gallery-android/build.gradle
+++ b/media-gallery-android/build.gradle
@@ -132,7 +132,7 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
     compile 'com.github.jacek-marchwicki.rx-java-extensions:rx-android-extensions:1.0.4'
     compile 'com.google.dagger:dagger:2.5'
-    compile 'com.appunite:photogalleryjava:1.0.4'
+//    compile 'com.appunite:photogalleryjava:1.0.4'
     provided 'com.google.dagger:dagger-compiler:2.5'
 
     testCompile 'junit:junit:4.12'
@@ -140,6 +140,6 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
 
-//    compile project(':photogalleryjava')
+    compile project(':photogalleryjava')
 
 }
