--- a/media-gallery-android/build.gradle
+++ b/media-gallery-android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
@@ -17,7 +17,7 @@ apply plugin: 'com.jfrog.bintray'
 
 group = 'com.appunite'
 archivesBaseName = 'media-gallery-android'
-version = '0.0.2'
+version = '0.0.4'
 
 repositories {
     mavenCentral()
