--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
 android:
   components:
     - tools
+    - platform-tools
     - build-tools-23.0.3
     - android-23
     - extra-google-m2repository
